assets/css/tailwind.scss
@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800;900&display=fallback');

@tailwind base;
@tailwind components;

// Additional styles
@import 'additional-styles/utility-patterns.scss';
@import 'additional-styles/range-slider.scss';
@import 'additional-styles/toggle-switch.scss';
@import 'additional-styles/theme.scss';

@tailwind utilities;

// Additional Tailwind directives: https://tailwindcss.com/docs/functions-and-directives/#responsive
@responsive {
  .rtl {
    direction: rtl;
  }
}

// See Alpine.js: https://github.com/alpinejs/alpine#x-cloak
[x-cloak] {
  display: none;
}

// AOS styles
$aos-distance: 10px;
@import 'node_modules/aos/src/sass/aos.scss';

@layer base {
  h1 {
    @apply mt-8 leading-tight text-4xl md:text-5xl;
    font-weight: bold;
  }
  h2 {
    @apply mt-8 leading-tight text-3xl md:text-4xl;
    font-weight: bold;
  }
  h3 {
    @apply mt-8 leading-tight text-2xl md:text-3xl;
    font-weight: bold;
  }
  h4 {
    @apply mt-8 leading-tight text-xl md:text-2xl;
    font-weight: bold;
  }
  h5 {
    @apply mt-8 leading-tight text-lg md:text-xl;
    font-weight: bold;
  }
  h6 {
    @apply mt-8 leading-tight text-base md:text-lg;
    font-weight: bold;
  }
  .nuxt-content {
    p {
      margin-top: 1rem;
      margin-bottom: 1rem;
    }
    a {
      @apply underline hover:no-underline
    }
    img {
      margin: auto;
    }
  }
}

